@@ -55,8 +55,10 @@ Legacy (0.4.x) series
 Misc.
 -----
 	[/]  CommandInterpreter:
-		[ ]  Tab completion of methods!
+		[X]  Tab completion of methods!
+		[ ]  Tab completion of state variables!
 		[ ]  Tab completion for the 'add' command: component-name
+		[ ]  Help on Method arguments? E.g. cpu.unassemble [addr]
 		[X]  "Methods" on objects? E.g.
 			[/]  cpu.unassemble		disassemble
 			[ ]  cpu.registers		show registers
